--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "tracker.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel api -s -D -d dist --presets es2015,stage-0",
+    "start": "node dist"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bittorrent-tracker": "^8.0.13"
+    "bittorrent-tracker": "^8.0.13",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "helmet": "^3.3.0"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0"
   }
 }
