Rearrange project structure

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "tracker.js",
   "scripts": {
-    "build": "babel api -s -D -d dist --presets es2015,stage-0",
+    "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "start": "node dist"
   },
   "repository": {
