--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "bittorrent-tracker": "^8.0.13",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "helmet": "^3.3.0"
+    "express-validation": "^1.0.1",
+    "helmet": "^3.3.0",
+    "joi": "^10.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
