--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
     "helmet": "^3.3.0",
-    "joi": "^10.1.0"
+    "joi": "^10.1.0",
+    "ws": "^2.2.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
