--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "start": "node dist",
-    "buildDocker": "npm run build && docker build -t p-monitor ."
+    "buildDocker": "npm run build && docker build -t p-monitor .",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
