--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "start": "node dist",
     "buildDocker": "npm run build && docker build -t p-monitor .",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -16,15 +17,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "bittorrent-tracker": "^8.0.13",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
     "helmet": "^3.3.0",
     "joi": "^10.1.0",
+    "transform-runtime": "^0.0.0",
     "ws": "^2.2.3"
   },
   "devDependencies": {
+    "ava": "^0.19.1",
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
@@ -34,5 +39,11 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1"
+  },
+  "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
   }
 }
