--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "start": "node dist",
-    "buildDocker": "npm run build && docker build -t p-monitor .",
+    "build-docker": "npm run build && docker build -t p-monitor .",
     "lint": "eslint src",
     "test": "ava"
   },
